tests/compile_fail/on_a_function_with_default_return_type.stderr
error: custom attribute panicked
 --> tests/compile_fail/on_a_function_with_default_return_type.rs:3:1
  |
3 | #[memoized(key_expr = ())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: not implemented: default return types are not supported
